Fixed overflow-y to auto.

--- a/sass/main.css
+++ b/sass/main.css
@@ -744,7 +744,7 @@ label {
   background-color: #fff;
   border: 1px solid #ededed;
   border-radius: 20px;
-  box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 2px 0px 3px rgba(0, 0, 0, 0.25);
   position: absolute;
   bottom: 0;
   z-index: -1;
@@ -1217,7 +1217,7 @@ label {
        column-gap: 25px;
   row-gap: 26px;
   padding: 10px;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: #ba0000 #efefef;
 }
