--- a/src/components/pokemonCardComponent/_pokemonCard.scss
+++ b/src/components/pokemonCardComponent/_pokemonCard.scss
@@ -20,7 +20,7 @@
     background-color: $color-white;
     border: 1px solid #ededed;
     border-radius: $radius-20;
-    box-shadow: 5px 5px 10px 5px rgba($color-black, 0.25);
+    box-shadow: 2px 2px 0px 3px rgba($color-black, 0.25);
 
     position: absolute;
     bottom: 0;
